# rust-crypto-pimitives

./: .travis.yml  Cargo.toml  README.md  build.rs
benches/: aesni.rs
src/: lib.rs
src/hw/: aesni.c  aesni_key.c
