[package]
name = "crypto-pimitives"
version = "0.1.0"
authors = ["Ilya Albrekht"]
edition = "2018"
repository = "https://github.com/elalfer/rust-crypto-pimitives"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
Crypto primitives.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
