[package]
name = "crypto_pimitives"
version = "0.1.0"
authors = ["Ilya Albrekht"]
edition = "2018"
repository = "https://github.com/elalfer/rust-crypto-pimitives"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
Performance oriented crypto primitives.
"""
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.0"

[build-dependencies]
cc = "1.0.47"

[[bench]]
name = "aesni"
harness = false